--- a/src/assets/components/ProfileWrapper/ProfileWrapper.module.scss
+++ b/src/assets/components/ProfileWrapper/ProfileWrapper.module.scss
@@ -7,6 +7,7 @@
   margin: auto;
   border-radius: 10px;
   margin-top: 40px;
+  box-shadow: 2px 2px 2px 2px rgb(177, 173, 173);
 }
 .data__container {
   display: flex;
