--- a/src/assets/components/FavoritesWrapper/FavoritesWrapper.module.scss
+++ b/src/assets/components/FavoritesWrapper/FavoritesWrapper.module.scss
@@ -4,6 +4,7 @@
   margin: auto;
   border-radius: 15px;
   box-shadow: 2px 2px 2px 2px rgb(177, 173, 173);
+  padding-bottom: 10px;
 
   h2 {
     margin-left: 60px;
@@ -13,7 +14,10 @@
   }
   a {
     text-decoration: none;
-    margin-left: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
     color: black;
     border-radius: 10px;
     border: 1px solid black;
@@ -21,5 +25,6 @@
     font-weight: 500;
     font-size: 12px;
     background-color: white;
+    margin: auto;
   }
 }
