--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 body {
   background-color: white;
 }
+
+.main__wrapper {
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
