--- a/src/assets/components/CurrencyWrapper/CurrencyWrapper.module.scss
+++ b/src/assets/components/CurrencyWrapper/CurrencyWrapper.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   width: 490px;
-  background-color: palegreen;
+  background-color: rgb(66, 226, 66);
   margin-right: 20px;
   border-radius: 15px;
   box-shadow: 2px 2px 2px 2px rgb(177, 173, 173);
