--- a/src/assets/components/CurrencyWrapper/CurrencyElement/CurrencyElement.module.scss
+++ b/src/assets/components/CurrencyWrapper/CurrencyElement/CurrencyElement.module.scss
@@ -3,5 +3,24 @@
   background-color: rgb(147, 248, 147);
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  font-size: 14px;
+  border-bottom: 1px solid rgb(66, 226, 66);
+
+  .name {
+    margin-left: 20px;
+    width: 150px;
+  }
+  .code {
+    margin-left: 50px;
+    width: 40px;
+  }
+  .mid {
+    margin-left: 50px;
+    width: 50px;
+  }
+  .picture {
+    margin-left: 70px;
+    width: 24px;
+    height: 24px;
+  }
 }
