--- a/src/assets/components/CurrencyWrapper/CurrencyWrapper.module.scss
+++ b/src/assets/components/CurrencyWrapper/CurrencyWrapper.module.scss
@@ -1,15 +1,18 @@
 .wrapper {
   width: 490px;
-  background-color: rgb(66, 226, 66);
+  background-color: #42e242;
   margin-right: 20px;
   border-radius: 15px;
   box-shadow: 2px 2px 2px 2px rgb(177, 173, 173);
   padding-bottom: 10px;
 
   h3 {
-    margin-left: 60px;
+    margin-left: 20px;
     margin-top: 20px;
     font-size: 16px;
     font-weight: 500;
+  }
+  .picture {
+    margin-left: 20px;
   }
 }
