--- a/src/assets/components/FavoritesWrapper/FavoritesWrapper.module.scss
+++ b/src/assets/components/FavoritesWrapper/FavoritesWrapper.module.scss
@@ -4,6 +4,7 @@
   border-radius: 15px;
   box-shadow: 2px 2px 2px 2px rgb(177, 173, 173);
   padding-bottom: 10px;
+  height: fit-content;
 
   h2 {
     margin-left: 60px;
