--- a/src/assets/components/FavoritesWrapper/CurrencyCell/CurrencyCell.module.scss
+++ b/src/assets/components/FavoritesWrapper/CurrencyCell/CurrencyCell.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   flex-direction: row;
   margin-bottom: 12px;
-  background-color: orchid;
+  background-color: #da70d6;
 
   .flag__wrapper {
     .flag {
