--- a/src/assets/components/FavoritesWrapper/CurrencyCell/CurrencyCell.module.scss
+++ b/src/assets/components/FavoritesWrapper/CurrencyCell/CurrencyCell.module.scss
@@ -1,41 +1,27 @@
 .cell__wrapper {
   width: 100%;
-  height: 60px;
+  background-color: rgb(235, 165, 235);
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  flex-direction: row;
-  margin-bottom: 12px;
-  background-color: #da70d6;
+  font-size: 14px;
+  border-bottom: 1px solid rgb(201, 92, 223);
 
-  .flag__wrapper {
-    .flag {
-      background-color: red;
-      width: 20px;
-      height: 20px;
-      margin-left: 60px;
-    }
+  .name {
+    margin-left: 20px;
+    width: 150px;
+  }
+  .code {
+    margin-left: 50px;
+    width: 40px;
+  }
+  .mid {
+    margin-left: 50px;
+    width: 50px;
   }
 
-  .text__wrapper {
-    width: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    p {
-      font-size: 14px;
-      font-weight: 500;
-    }
-  }
-
-  .button__wrapper {
-    .delete {
-      font-size: 14px;
-      background-color: rgb(201, 92, 223);
-      padding: 2px;
-      border-radius: 10px;
-      margin-right: 60px;
-      padding: 6px;
-    }
+  .delete {
+    margin-left: 70px;
+    width: 24px;
+    height: 24px;
   }
 }
